--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+vendor/
+*.ini
+include-data-sources.txt
+exclude-data-sources.txt
